--- a/src/main/webapp/SubmitName.html
+++ b/src/main/webapp/SubmitName.html
@@ -5,8 +5,9 @@
     <title>Insert title here</title>
 </head>
 <body>
-<form action="/s1" method="get">
-    来者可留下姓名？<input type="text" name="username">
+<form action="s1" method="get">
+    来者可留下姓名？<br>
+    <input type="text" name="username"><br>
     <input type="submit" value="提交">
 </form>
 </body>
