--- a/src/main/webapp/Login.html
+++ b/src/main/webapp/Login.html
@@ -5,9 +5,9 @@
     <title>Insert title here</title>
 </head>
 <body>
-<form action="/hello/h1" method="get">
-    用户名<input type="text" name="username">
-    密码<input type="password" name="password">
+<form action="h1" method="get">
+    用户名<input type="text" name="username"><br/>
+    密码<input type="password" name="password"><br/>
     <input type="submit" value="提交">
 </form>
 </body>
