--- a/src/main/webapp/SubmitName.html
+++ b/src/main/webapp/SubmitName.html
@@ -9,14 +9,14 @@
 
 
 
-<form action="sd1" method="get">
+<form action="StartDispatch1" method="get">
     来者可留下明文？<br>
     <input type="text" name="usertext"><br>
     <input type="submit" value="提交Get请求">
 </form>
 
 
-<form action="sd1" method="post">
+<form action="StartDispatch1" method="post">
     来者可留下密文？<br>
     <input type="text" name="usertext"><br>
     <input type="submit" value="提交Post请求">
