--- a/src/main/webapp/Login.html
+++ b/src/main/webapp/Login.html
@@ -5,9 +5,9 @@
     <title>Insert title here</title>
 </head>
 <body>
-<form action="h1" method="get">
-    用户名<input type="text" name="username"><br/>
-    密码<input type="password" name="password"><br/>
+<form action="LoginProcess" method="post">
+    用户名<input type="text" name="loginName"><br/>
+    密码<input type="password" name="loginPwd"><br/>
     <input type="submit" value="提交">
 </form>
 </body>
