--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -5,6 +5,9 @@
     <title>Main</title>
 </head>
 <body>
-
+    <hr />
+        Wlecome!<br>
+        Here is Main Page!<br>
+    <hr />
 </body>
 </html>
