--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,17 +2,17 @@
 <html lang="cn">
 <head>
     <meta charset="UTF-8">
-    <title>欢迎新同学！</title>
+    <title>欢迎使用登录界面！</title>
 </head>
 <body>
-<form action="LoginProcess" method="post">
+<form action="loginProcess.do" method="post">
     <label>
         姓名：
-        <input type="text" name="name">
+        <input type="text" name="loginName">
     </label><br>
     <label>
         密码：
-        <input type="password" name="pwd">
+        <input type="password" name="loginPwd">
     </label><br>
 
     <input type="submit" value="登陆">
